Fix the overflow on about page paragraphs

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -321,7 +321,7 @@ form div {
 }
 
 .about-text p {
-    overflow: scroll;
+    overflow: hidden;
     padding: 1.5rem 1.5rem 0 1.5rem;
     margin: 0 auto;
     line-height: 25px;
